--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+/ReportingService/ReportingService.Api/appsettings.json
+/ReportingService/ReportingService.Api/appsettings.Development.json
