--- a/ReportingService/ReportingService.Api/appsettings.DefaultConfiguration.json
+++ b/ReportingService/ReportingService.Api/appsettings.DefaultConfiguration.json
@@ -6,13 +6,13 @@
         },
         {
           "Args": {
-            "path": "Log_ReportingService"
+            "path": "../logs/reporting-service.log"
           }
         }
       ]
     },
     "DatabaseSettings": {
-      "ReportingServiceDb": "ReportimgServiceDb_ConfigurationManager"
+      "ReportingService": "ConnectionString"
     }
   }
 }
