--- a/ReportingService/ReportingService.Api/appsettings.Development.json
+++ b/ReportingService/ReportingService.Api/appsettings.Development.json
@@ -5,33 +5,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DatabaseSettings": {
+    "ReportingService": "ConnectionString"
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
-    "MinimumLevel": "Information",
+    "MinimumLevel": {
+      "Default": "Information"
+    },
     "WriteTo": [
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} [{Level:u3} [{SourceContext}] {Message:lj}{Exception}{NewLine}]"
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3} [{SourceContext}] {Message} {NewLine} {Exception}"
         }
       },
       {
         "Name": "File",
         "Args": {
-          "path": "Log_ReportingService",
+          "path": "../logs/reporting-service.log",
           "rollingInterval": "Day",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3} [{SourceContext}] {Message}{NewLine}{Exception}]"
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} [{SourceContext}] {Message:lj} {Exception} {NewLine}"
         }
       }
     ],
-    "Enrich": [
-      "FromLogContext"
-    ]
-  },
-  "DatabaseSettings": {
-    "ReportingServiceDb": "ReportimgServiceDb_ConfigurationManager"
-  },
-  "ConfigurationServiceSettings": {
-    "ConfigurationServiceForCrm": "https://194.87.210.5:13000/api/configuration?service=5"
+    "Enrich": [ "FromLogContext" ]
   }
 }
