--- a/ReportingService/ReportingService.Api/appsettings.json
+++ b/ReportingService/ReportingService.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "DatabaseSettings": {
-    "ReportingServiceDb": "ReportingServiceDb_ConfigurationManager"
+    "ReportingService": "ConnectionString"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
@@ -23,7 +23,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Log_ReportingService",
+          "path": "../logs/reporting-service.log",
           "rollingInterval": "Day",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} [{SourceContext}] {Message:lj} {Exception} {NewLine}"
         }
