--- a/ReportingService/ReportingService.Api/appsettings.DefaultConfiguration.json
+++ b/ReportingService/ReportingService.Api/appsettings.DefaultConfiguration.json
@@ -6,7 +6,7 @@
         },
         {
           "Args": {
-            "path": "../logs/reporting-service.log"
+            "path": "Log_ConfigurationManager"
           }
         }
       ]
