--- a/ReportingService/ReportingService.Api/appsettings.json
+++ b/ReportingService/ReportingService.Api/appsettings.json
@@ -23,7 +23,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "../logs/reporting-service.log",
+          "path": "Log_ConfigurationManager",
           "rollingInterval": "Day",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} [{SourceContext}] {Message:lj} {Exception} {NewLine}"
         }
